--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "@ng-select/ng-select": "^11.0.0",
     "bootstrap": "^5.3.0",
+    "crypto-js": "^4.1.1",
     "ng2-ckeditor": "^1.3.7",
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^17.0.2",
@@ -44,6 +45,7 @@
     "@angular-devkit/build-angular": "^16.1.4",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/crypto-js": "^4.1.2",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
