--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "@ng-select/ng-select": "^11.0.0",
     "bootstrap": "^5.3.0",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "ng2-ckeditor": "^1.3.7",
     "ngx-pagination": "^6.0.3",
