--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "ng2-ckeditor": "^1.3.7",
+    "ngx-cookie-service": "^16.0.1",
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
